deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: evisa
  name: evisa
spec:
  replicas: 1
  selector:
    matchLabels:
      name: evisa
  template:
    metadata:
      labels:
        name: evisa
    spec:
      containers:
      - image: gcr.io/evisa-198403/evisa:v1.0
        name: evisa
        ports:
        - containerPort: 80
          protocol: TCP
