service.yaml
kind: Service
apiVersion: v1
metadata:
  name: evisavn
spec:
  selector:
    app: evisavn
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
